--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
 </head>
 <body>
 	<div id=root></div>
+	<script type="text/javascript">
+		ReactDOM.render(
+			React.createElement("h1", {"style": {"color":"red"}}, "Hello World"),
+			document.getElementById("root")
+			);
+		
+	</script>
 </body>
 </html>
