--- a/index.html
+++ b/index.html
@@ -10,9 +10,15 @@
 	<div id=root></div>
 	<script type="text/javascript">
 		ReactDOM.render(
-			React.createElement("h1", {"style": {"color":"red"}}, "Hello World"),
+			React.createElement(
+				"div",
+				null,
+				React.createElement(
+					"h1", {"style": {"color":"red"}}, "Hello World")
+			),
 			document.getElementById("root")
 			);
+
 		
 	</script>
 </body>
