--- a/Working-with-jsx1.html
+++ b/Working-with-jsx1.html
@@ -5,12 +5,20 @@
 	<script src="https://unpkg.com/react@16.7.0/umd/react.development.js"></script>
 	<script src="https://unpkg.com/react-dom@16.7.0/umd/react-dom.development.js"></script>
 	<script type="text/javascript" src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+	<style type="text/css">
+		.heading
+			{color: red;}
+	</style>
 </head>
 <body>
 	<div id=root></div>
 	<script type="text/babel">
+		let name = "Smith";
 		ReactDOM.render(
-			<h1>Working with JSX</h1>,
+			<div>
+			<h1 className="heading">Hi {name}</h1>
+			<h3>*Using JSX</h3>
+			</div>,
 			document.getElementById("root")
 			);
 	</script>
